--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="half">
                     <div>
                         <div class="flex">
-                            <img src=".Styles/menu1.png" alt="Tikka Chicken">
+                            <img src="Styles/menu1.png" alt="Tikka Chicken">
                             <div>
                                 <h5 class="text5">Tikka Chicken</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
@@ -189,7 +189,7 @@
                             </div>
                         </div>
                         <div class="flex">
-                            <img src=".Styles/menu2.png" alt="Tikka Chicken">
+                            <img src="Styles/menu2.png" alt="Tikka Chicken">
                             <div>
                                 <h5 class="text5">Tikka Chicken</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
@@ -197,7 +197,7 @@
                             </div>
                         </div>
                         <div class="flex">
-                            <img src=".Styles/menu3.png" alt="Tikka Chicken">
+                            <img src="Styles/menu3.png" alt="Tikka Chicken">
                             <div>
 
                                 <h5 class="text5">Tikka Chicken</h5>
@@ -209,7 +209,7 @@
                     </div>
                     <div>
                         <div class="flex">
-                            <img src=".Styles/menu4.png" alt="Tikka Chicken">
+                            <img src="Styles/menu4.png" alt="Tikka Chicken">
                             <div>
                                 <h5 class="text5">Tikka Chicken</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
@@ -217,7 +217,7 @@
                             </div>
                         </div>
                         <div class="flex">
-                            <img src=".Styles/menu5.png" alt="Tikka Chicken">
+                            <img src="Styles/menu5.png" alt="Tikka Chicken">
                             <div>
                                 <h5 class="text5">Tikka Chicken</h5>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio,
@@ -225,7 +225,7 @@
                             </div>
                         </div>
                         <div class="flex">
-                            <img src=".Styles/menu6.png" alt="Tikka Chicken">
+                            <img src="Styles/menu6.png" alt="Tikka Chicken">
                             <div>
 
                                 <h5 class="text5">Tikka Chicken</h5>
