--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                 <div>
                     <h3>About</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dolorum, labore porro tempora iure aliquid eligendi?</p>
+                    Design Credit: <a href="https://www.freepik.com/free-psd/indian-food-website-templates-collection_4637694.htm#query=website%20design&position=0&from_view=keyword">Freepik</a>
                 </div>
             </div>
 
